--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,10 +45,8 @@ jobs:
         slither-args: "--compile-force-framework hardhat"
         node-version: ${{ matrix.node-version }}
 
-    # - name: Test deployment
-    #   env:
-    #     INFURA_API_TOKEN: ${{ secrets.INFURA_API_TOKEN }}
-    #   run: ./scripts/test_deploy.sh
+    - name: Test deployment
+      run: ./scripts/test_deploy.sh
 
     # - name: Test upgrade
     #   env:
