--- a/package.json
+++ b/package.json
@@ -2,18 +2,12 @@
   "packageManager": "yarn@4.10.3",
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@nomicfoundation/hardhat-ethers": "^4.0.2",
-    "@nomicfoundation/hardhat-ethers-chai-matchers": "^3.0.0",
-    "@nomicfoundation/hardhat-ignition": "^3.0.0",
-    "@nomicfoundation/hardhat-ignition-ethers": "^3.0.0",
-    "@nomicfoundation/hardhat-keystore": "^3.0.2",
-    "@nomicfoundation/hardhat-mocha": "^3.0.5",
-    "@nomicfoundation/hardhat-network-helpers": "^3.0.2",
-    "@nomicfoundation/hardhat-toolbox-mocha-ethers": "^3.0.1",
-    "@nomicfoundation/hardhat-typechain": "^3.0.0",
-    "@nomicfoundation/hardhat-verify": "^3.0.4",
-    "@nomicfoundation/ignition-core": "^3.0.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.1.2",
+    "@nomicfoundation/hardhat-ethers": "^3.1.2",
+    "@nomicfoundation/hardhat-network-helpers": "^1.1.2",
+    "@nomicfoundation/hardhat-verify": "^2.1.3",
     "@typechain/ethers-v6": "^0.5.1",
+    "@typechain/hardhat": "^9.1.0",
     "@types/chai": "^4.2.0",
     "@types/chai-as-promised": "^8.0.1",
     "@types/mocha": ">=10.0.10",
@@ -24,9 +18,10 @@
     "ethers": "^6.14.0",
     "forge-std": "foundry-rs/forge-std#v1.9.4",
     "globals": "^16.5.0",
-    "hardhat": "^3.0.11",
+    "hardhat": "^2.27.0",
     "mocha": "^11.0.0",
     "solhint": "^6.0.1",
+    "ts-node": "^10.9.2",
     "typechain": "^8.3.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.3"
@@ -44,9 +39,10 @@
     "test": "yarn tsc && yarn hardhat test",
     "tsc": "yarn exec tsc --noEmit"
   },
-  "type": "module",
   "dependencies": {
     "@openzeppelin/contracts": "5.4.0",
-    "chalk": "^5.6.2"
+    "@skalenetwork/upgrade-tools": "^2.0.2",
+    "chalk": "^4",
+    "dotenv": "^17.2.3"
   }
 }
