--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "5.4.0",
-    "@skalenetwork/upgrade-tools": "4.0.0-develop.3",
+    "@skalenetwork/upgrade-tools": "4.0.0-constructor.1",
     "chalk": "^4",
     "dotenv": "^17.2.3"
   }
